Fix iframe responsiveness on mobile

--- a/resources/assets/sass/_responsive.scss
+++ b/resources/assets/sass/_responsive.scss
@@ -582,6 +582,10 @@
             margin-top: 350px;
         }
     }
+
+    .max-width-50-pc-sm {
+        max-width: 50%;
+    }
 }
 
 @media (min-width: 580px) and (max-width: 767px)
